--- a/manual.html
+++ b/manual.html
@@ -40,7 +40,7 @@ DAMAGE.
 <!--PRE-HEAD-START-->
 <!--{{{-->
 <link rel='alternate' type='application/rss+xml' title='RSS' href='index.xml' />
-<link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAEBAQAAAAAAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAA0c7LAICAgAD%2F%2F%2F8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzMwAzMwAAADEjADEjAAAAMhMAMhMAAAAzMwAzMwAAADIjADIjAAAAMiMAMiMAAAAyIwAyIwAAADIjADIjAAAAMiMAMiMgAAAyIwAyIwAAADIhMxIjAAAAMiIiIhMAAAAyIyIhMAAAADMzMzMAAAAAAAAAAAAAD%2F%2FwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOAHAADgBwAA4A8AAOAfAAD%2F%2FwAA" type="image/x-icon">
+<link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAEBAQAAAAAAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAA0c7LAICAgAD%2F%2F%2F8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzMwAzMwAAADEjADEjAAAAMhMAMhMAAAAzMwAzMwAAADIjADIjAAAAMiMAMiMAAAAyIwAyIwAAADIjADIjAAAAMiMAMiMgAAAyIwAyIwAAADIhMxIjAAAAMiIiIhMAAAAyIyIhMAAAADMzMzMAAAAAAAAAAAAAD%2F%2FwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOAHAADgBwAA4A8AAOAfAAD%2F%2FwAA" type="image/x-icon"/>
 <!--}}}-->
 
 <!--PRE-HEAD-END-->
@@ -1183,8 +1183,7 @@ Torben Nielsen, Bjarne Stroustrup, Werner Ganahl, and the whole team at [[GINS|h
 </pre>
 </div>
 <div title="Agile application development" modifier="Peter Hübel" created="200905191450" modified="201404061250" tags="Benefits" changecount="26">
-<pre>
-At the end of the day, every piece of software has to be specified, written, tested, and deployed. Developing with a &lt;&lt;tiddler xeno&gt;&gt; makes that easy.
+<pre>At the end of the day, every piece of software has to be specified, written, tested, and deployed. Developing with a &lt;&lt;tiddler xeno&gt;&gt; makes that easy.
 !!!!!Small
 The &lt;&lt;tiddler xeno&gt;&gt; provides a ''single infrastructure'' necessary to build and deploy applications. It works as an XML repository, lets you integrate your relational databases, and provides you with a high performance web server, giving you everything you need to fulfill your XML content delivery needs.
 !!!!!Fast
@@ -2549,8 +2548,7 @@ Or should I write it here?</pre>
 <pre>Mostly named Javascript, but actually a w3c standard:</pre>
 </div>
 <div title="Efficient resource management" modifier="Peter Hübel" created="200905191452" modified="201404061246" changecount="31">
-<pre>
-Ultimately all information systems must run on hardware, and &lt;&lt;tiddler xeno&gt;&gt; is designed from the bottom up for efficient resource utilisation.
+<pre>Ultimately all information systems must run on hardware, and &lt;&lt;tiddler xeno&gt;&gt; is designed from the bottom up for efficient resource utilisation.
 !!!!!Space
 We have gone to extreme lengths to avoid caching of data where the operating system readily does this (like serving content from a file system). This leads to a measurable much more efficient management of resources.
 !!!!!Time
