Clean up content

--- a/manual.html
+++ b/manual.html
@@ -39,8 +39,8 @@ DAMAGE.
 " />
 <!--PRE-HEAD-START-->
 <!--{{{-->
-<link rel='shortcut icon' href='data:image/x-icon;base64,AAABAAEAEBAQAAAAAAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAA0c7LAICAgAD%2F%2F%2F8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzMwAzMwAAADEjADEjAAAAMhMAMhMAAAAzMwAzMwAAADIjADIjAAAAMiMAMiMAAAAyIwAyIwAAADIjADIjAAAAMiMAMiMgAAAyIwAyIwAAADIhMxIjAAAAMiIiIhMAAAAyIyIhMAAAADMzMzMAAAAAAAAAAAAAD%2F%2FwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOAHAADgBwAA4A8AAOAfAAD%2F%2FwAA' type='image/x-icon' />
-<link rel='alternate' href='index.xml' type='application/rss+xml' title='RSS' />
+<link rel='alternate' type='application/rss+xml' title='RSS' href='index.xml' />
+<link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAEBAQAAAAAAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAA0c7LAICAgAD%2F%2F%2F8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzMwAzMwAAADEjADEjAAAAMhMAMhMAAAAzMwAzMwAAADIjADIjAAAAMiMAMiMAAAAyIwAyIwAAADIjADIjAAAAMiMAMiMgAAAyIwAyIwAAADIhMxIjAAAAMiIiIhMAAAAyIyIhMAAAADMzMzMAAAAAAAAAAAAAD%2F%2FwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOAHAADgBwAA4A8AAOAfAAD%2F%2FwAA" type="image/x-icon" />
 <!--}}}-->
 
 <!--PRE-HEAD-END-->
@@ -521,45 +521,6 @@ The actual processing, correcting for byte order, scaling, converting values to 
 !!InformationSpaces
 </pre>
 </div>
-<div title="15 February 2014" modifier="Peter Hübel" created="201402142340" modified="201403020138" tags="journal" changecount="8">
-<pre>!!The Internet's Biggest Brothel
-
-http://www.streamdates.com/services.html run the http://runetki.com/agreement/ (yes, try reading the Agreement) amongst others.
-
-These sites (there is a whole complex of them) are [[afiliated with MasterCard|http://partners.runetki.com/]] (read the latin letters on the page) who has a [[foundation|http://www.mastercardfdn.org/]]. All pictures are of black people, stuff which reads about getting them online and them having some &quot;education&quot;... And it struck me: How about giving the girls in Russia some education as well? Instead of just exploiting them. Mr. Vladimir Putain's staggering Russia Inc. does not seem to be able to educate its people any more.
-
-Instead easy money can be made by flashing your tits and pussy. Well, it always has, of course, been that way - but only recently now we have the technology to make up for the deficit anybody might have, if the neighbours daughter is a prudence, and you don't have a sister. Surely there be stuff out there for girls as well...
-
-Give some of the money to those Russian girls, MasterCard! Or is this focus on Africa rooted in your planning of the next generation of sex workers, like they seem to do [[Hungary|http://translate.google.com/translate?hl=en&amp;sl=hu&amp;tl=en&amp;u=http://hu.wikipedia.org/wiki/Gatty%25C3%25A1n_Gy%25C3%25B6rgy]]? Accusations aside, the girls sell them selves with discounts??!? That makes me want to puke. 
-
-Back to the streamdates.com story. 
-
-Why is it always porn, that drives technology? You know, when moving pictures were invented, one of the first thing people did, was filming what happened when people were naked. Mammonites have an overwhelming appetite for pussy, mainly because they have an overwhelming appetite for themselves, and most of them are pussies when it gets to standing up for your next man. So the bankers were in it rather quickly too. Or should we cut through the bullshit, and simple say the whole show was run by Jews and by the Fascist Mob (Italy/Germany), as it truly was in Hollywood's early years. That goes for the gambling too.
-
-The players are different now - the tax evasion problem... You know, the poor girls have to pay taxes or bribes or whatever it takes to make Russia Inc. happy.
-
-http://www.youtube.com/watch?v=pZBA491AukQ
-</pre>
-</div>
-<div title="2 March 2014" modifier="Peter Hübel" created="201403020142" modified="201403020149" tags="journal" changecount="4">
-<pre>!!What the hell is going on with my old domain?
-
-Now a (at least to me) novel concept ocurred to me at http://www.youtube.com/watch?v=pZBA491AukQ. I found a copy of the actual, uncensored footage, and well, yes it's about the Internets Biggest Brothel
-
-While checking http://idolbasics.com.w3cspy.com/to see if there was any information to be found (notice the 
-{{{
-Billing Contact: 
-WhoisProtectService.net PROTECTSERVICE, LTD. idolbasics.c**@whoisprotectservice.net 
-27 Old Gloucester Street 
-London WC1N 3AX 
-United Kingdom 
-}}}
-
-Now, what might a WhoisProtectService be?
-
-Just for fun I tried to check, what might be known about my old domain, strxtrs.net.
-See for yourselves: </pre>
-</div>
 <div title="23 November 2012" modifier="Peter Hübel" created="201211232010" modified="201404061158" tags="journal" changecount="7">
 <pre>Ich habe das [[Glück]] mein [[Gück]] gefunden zu haben.
 
@@ -593,59 +554,10 @@ Instead of discarding the oldest frame, then, the oldest frame goes into the sam
 
 </pre>
 </div>
-<div title="3 February 2014" modifier="YourName" created="201402031650" modified="201402031651" tags="journal" changecount="2">
-<pre>!!Solving kernel_task going crazy
-
-From: http://www.rdoxenham.com/?p=259
-
-Firstly, you’re going to need the model identifier of your pesky Mac:
-$ system_profiler -detailLevel mini | grep &quot;Model Identifier:&quot;
-      Model Identifier: MacBookAir2,1
-
-The kext we need to modify is IOPlatformPluginFamily.kext, you can verify it is running by-
-sh-3.2# kextstat | grep IOPlatformPluginFamily
-   67    3 0xffffff7f81229000 0x7000     0x7000     com.apple.driver.IOPlatformPluginFamily (5.1.0d17) &lt;8 7 6 5 4 3&gt;
-
-Within this kext will be another further kext- ACPI_SMC_PlatformPlugin.kext, in which each recent Macintosh model is listed with relevant instructions that the kernel uses to determine how and when to invoke the control. (Make sure you switch to root now)
-sh-3.2# cd /System/Library/Extensions/IOPlatformPluginFamily.kext/
-sh-3.2# cd Contents/PlugIns/ACPI_SMC_PlatformPlugin.kext/
-sh-3.2# cd Contents/Resources/
-sh-3.2# ls | wc -l
-49
-
-So, there’s 49 different profiles listed in this kext as of the writing of this. We simply need to move the ‘plist’ file for the model identifier we discovered earlier out of that directory, so in my case I need to move file ‘MacBookAir2_1.plist’ out of this directory (to somewhere safe), but replace my model identifier with your specific one.
-sh-3.2# mv MacBookAir2_1.plist /Users/&lt;your username&gt;/
-
-You can simply reboot now for the changes to take effect. We could have removed the entire kext but it’s much safer to remove the plist file for the specific model as (to be honest) I don’t know what the rest of that kernel module does. I’ve been using this ‘fix’ for a few days now and not noticed any problems at all- overall it’s much quicker and I don’t have to worry about it running out of steam. What I would recommend is that you be a bit more careful about the placement of your Mac, you don’t want to be covering the exhaust. The Mac should protect itself if it *does* reach max temperature but I would just be a little more careful.
-
-Note: It’s likely that this kext will get updated in the future by Apple in their update packs and as a result will replace the file you deleted/moved therefore you may have to repeat this process in the future &lt;&lt;smiley :-)&gt;&gt; </pre>
-</div>
 <div title="4 January 2013" modifier="YourName" created="201301040141" tags="journal" changecount="1">
 <pre>Thinking about how to continue the C++ course...
 
 I think we have to dig a bit deeper into the LSP and the &quot;design by contract&quot; concepts very popular in OOP.</pre>
-</div>
-<div title="&lt;gins:pipeline/&gt;" modifier="Peter Hübel" created="201403241158" modified="201403241159" changecount="2">
-<pre>A &lt;xeno:runway/&gt;</pre>
-</div>
-<div title="&lt;leutert:pdm/&gt;" modifier="Peter Hübel" created="201403221956" modified="201403222211" changecount="9">
-<pre>!!!Synopsis
-A [[&lt;gins:pipeline/&gt;]] with provides some special pipes, and the logic to implement the Leutert PDM II System, along with some standard ''gins'' services.
-
-!!!Attributes
-''sampler''
-
-
-''xeno:sampler'' is set to ''gins:localbus''</pre>
-</div>
-<div title="&lt;netropy:duct_tape/&gt;" modifier="Peter Hübel" created="201201200206" modified="201201282216" tags="service" changecount="18">
-<pre>!!!Synopsis
-This module lets you insert loose fragments into the structure of a [[&lt;netropy:space/&gt;]]. No need to say, use this at your own risk and don't bet your life on it. But it is good for tinkering, and an expression of the fact, that the programmer has had a poor imagination, not foreseeing every possible use of the information present in an InformationSpace.
-!!!Content
-There is no inner structure to the blueprint. Rather the service acts as a generic XML service, returning the content of the blueprint at a given location.
-!!!Example
-Viewing the definition of the ''Hello World'' application at {{{/hello/world}}} on this server can be accomplished by visiting [[http://blueprint/hello/world]].
-</pre>
 </div>
 <div title="&lt;netropy:fbdev/&gt;" modifier="PeterHübel" created="201206012123" modified="201210042235" changecount="11">
 <pre>{{{
@@ -828,7 +740,7 @@ The visitor has information on from where he originated. So we use this to call 
 !!!Discussion
 Knowing that the visitor's origin is a space structured just like the origin's space can have great benefits. You can treat the other part like yourself then... same structure, same words (namespace)... </pre>
 </div>
-<div title="&lt;xeno:copy/&gt;" modifier="Peter Hübel" created="201112170212" modified="201403132111" tags="service" changecount="44">
+<div title="&lt;xeno:copy/&gt;" modifier="Peter Hübel" created="201112170212" modified="201604191833" tags="service" changecount="45">
 <pre>!!!Synopsis
 This module lets you copy information.
 !!!Attributes
@@ -838,7 +750,7 @@ This module lets you copy information.
 This server has mounted [[jQuery]] in the following manner:
 {{{
 &lt;jquery&gt;
-  &lt;netropy:copy init=&quot;http://code/google.com/jquery/jquery-latest-min.js&quot;/&gt;
+  &lt;xeno:copy init=&quot;http://code.jquery.com/jquery-1.9.1.min.js&quot; type=&quot;application/javascript&quot;/&gt;
 &lt;/jquery&gt;
 }}}
 
@@ -924,6 +836,24 @@ In some &lt;xeno:space/&gt; define
 style (for having your own &quot;display&quot; MarkupLanguage).
 
 </pre>
+</div>
+<div title="&lt;xeno:duct_tape/&gt;" modifier="Peter Hübel" created="201201200206" modified="201604191936" tags="service" changecount="20">
+<pre>!!!Synopsis
+This module lets you insert loose fragments into the structure of a [[&lt;netropy:space/&gt;]]. No need to say, use this at your own risk and don't bet your life on it. But it is good for tinkering, and an expression of the fact, that the programmer has had a poor imagination, not foreseeing every possible use of the information present in an InformationSpace.
+!!!Content
+!!!Example
+{{{
+&lt;xeno:space ...&gt;
+  &lt;xeno:http port=&quot;8901&quot;/&gt;
+  &lt;xeno:duct_tape doctype=&quot;html&quot;/&gt;
+  &lt;xeno:copy type=&quot;text/html&quot;&gt;
+    &lt;html xmlns=&quot;http://www.w3.org/1999/xhtml&quot;&gt;
+      &lt;head&gt;
+        ...
+  &lt;/xeno:copy&gt;
+&lt;/xeno:space&gt;
+}}}
+This is a minimal space, serving one wellformed static ''HTML'' document on port ''8901''.</pre>
 </div>
 <div title="&lt;xeno:extend/&gt;" modifier="Peter Hübel" created="201310091411" modified="201403221938" tags="ToDo" changecount="7">
 <pre>!!Synopsis
@@ -1260,13 +1190,6 @@ Read more about this service [[here|&lt;netropy:blueprint/&gt;]].</pre>
 *''space'' - a place to extend simply by going there and setting up the structure on the way.
 *[[sql|&lt;netropy:sql/&gt;]] - a place to interface with a database (ODBC in this version). ODBC also allows you also to use an Excel&amp;reg; spreadsheet as your data source as in the [[Escapa!|/escapa/]] sample application.
 *[[blueprint|&lt;netropy:blueprint/&gt;]] - a service which allows you to introspect on the [[&lt;netropy:space/&gt;]] it resides in.</pre>
-</div>
-<div title="Bullet Points" modifier="Peter Hübel" created="201203150201" modified="201203151247" changecount="3">
-<pre>//The bullet points to you//
-
-* Systeme (konkretes Exempel der Begriff Österreich, und www.justanswer.de)
-* Wertschöpfung (von wo schöfpfen wir, was hat der Schöpfer mit &lt;netropy:god/&gt; zu tun?). Und was war da mit dem jungen Werther und dem Wirth? 
-</pre>
 </div>
 <div title="BuzzWords" modifier="Peter Hübel" created="201201290044" changecount="1">
 <pre>ProgrammingByExample
@@ -3878,7 +3801,7 @@ The products home page is at http://www.agencexml.com/xsltforms, and is hosted a
 
 As part of the Netropy project we want to experiment more with [[XRX|http://en.wikipedia.org/wiki/XRX_(web_application_architecture)]] and have mounted the package from the XSLTForms project on this Netropy Server at &lt;html&gt;&lt;a href='/xsltforms/index.htm' class='tiddlyLink tiddlyLinkExisting' title='Opens the XSLTForms demo'&gt;/xsltforms&lt;/a&gt;&lt;/html&gt;.</pre>
 </div>
-<div title="netropy" modifier="PeterHübel" created="201205240005" modified="201205240118" tags="systemConfig" changecount="5">
+<div title="netropy-macro" modifier="Peter Hübel" created="201205240005" modified="201604191837" tags="systemConfig" changecount="6">
 <pre>// Don't know what will change when i change ''place'' to ''context''. iPhone? 
 // FirstStep: Write the code or set a breakpoint in the script with a {{{debugger;}}} statement.
 /*{{{*/
