--- a/manual.html
+++ b/manual.html
@@ -39,8 +39,8 @@ DAMAGE.
 " />
 <!--PRE-HEAD-START-->
 <!--{{{-->
-<link rel='alternate' type='application/rss+xml' title='RSS' href='index.xml' />
-<link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAEBAQAAAAAAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAA0c7LAICAgAD%2F%2F%2F8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzMwAzMwAAADEjADEjAAAAMhMAMhMAAAAzMwAzMwAAADIjADIjAAAAMiMAMiMAAAAyIwAyIwAAADIjADIjAAAAMiMAMiMgAAAyIwAyIwAAADIhMxIjAAAAMiIiIhMAAAAyIyIhMAAAADMzMzMAAAAAAAAAAAAAD%2F%2FwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOAHAADgBwAA4A8AAOAfAAD%2F%2FwAA" type="image/x-icon" />
+<link rel='alternate' type='application/rss+xml' title='RSS' href='index.xml'/>
+<link rel='shortcut icon' href='data:image/x-icon;base64,AAABAAEAEBAQAAAAAAAoAQAAFgAAACgAAAAQAAAAIAAAAAEABAAAAAAAgAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAA0c7LAICAgAD%2F%2F%2F8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzMwAzMwAAADEjADEjAAAAMhMAMhMAAAAzMwAzMwAAADIjADIjAAAAMiMAMiMAAAAyIwAyIwAAADIjADIjAAAAMiMAMiMgAAAyIwAyIwAAADIhMxIjAAAAMiIiIhMAAAAyIyIhMAAAADMzMzMAAAAAAAAAAAAAD%2F%2FwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOGHAADhhwAA4YcAAOAHAADgBwAA4A8AAOAfAAD%2F%2FwAA' type='image/x-icon' />
 <!--}}}-->
 
 <!--PRE-HEAD-END-->
@@ -521,20 +521,6 @@ The actual processing, correcting for byte order, scaling, converting values to 
 !!InformationSpaces
 </pre>
 </div>
-<div title="23 November 2012" modifier="Peter Hübel" created="201211232010" modified="201404061158" tags="journal" changecount="7">
-<pre>Ich habe das [[Glück]] mein [[Gück]] gefunden zu haben.
-
-A must read for those of you who worry:
-The Value of Psychotic Experience, by Allan Watts. 
-
-http://www.greenarraychips.com/home/documents/greg/PB001-100503-GA144-1-10.pdf
-
-!!Command and Control
-Context switching between Apple and CUA drives me NUTS!
-
-!!NerdRemarkOfTheDay
-</pre>
-</div>
 <div title="3 April 2014" modifier="Peter Hübel" created="201404030037" modified="201404032232" tags="journal" changecount="5">
 <pre>Marathon Coding!
 
@@ -553,11 +539,6 @@ Instead of discarding the oldest frame, then, the oldest frame goes into the sam
 
 
 </pre>
-</div>
-<div title="4 January 2013" modifier="YourName" created="201301040141" tags="journal" changecount="1">
-<pre>Thinking about how to continue the C++ course...
-
-I think we have to dig a bit deeper into the LSP and the &quot;design by contract&quot; concepts very popular in OOP.</pre>
 </div>
 <div title="&lt;netropy:fbdev/&gt;" modifier="PeterHübel" created="201206012123" modified="201210042235" changecount="11">
 <pre>{{{
@@ -3800,6 +3781,19 @@ The products home page is at http://www.agencexml.com/xsltforms, and is hosted a
 &lt;html&gt;&lt;a href=&quot;http://sourceforge.net/projects/xsltforms/&quot;&gt;&lt;img src=&quot;http://sflogo.sourceforge.net/sflogo.php?group_id=242651&amp;type=12&quot;/&gt;&lt;/a&gt;&lt;/html&gt;
 
 As part of the Netropy project we want to experiment more with [[XRX|http://en.wikipedia.org/wiki/XRX_(web_application_architecture)]] and have mounted the package from the XSLTForms project on this Netropy Server at &lt;html&gt;&lt;a href='/xsltforms/index.htm' class='tiddlyLink tiddlyLinkExisting' title='Opens the XSLTForms demo'&gt;/xsltforms&lt;/a&gt;&lt;/html&gt;.</pre>
+</div>
+<div title="netropy" modifier="Peter Hübel" created="201604210531" changecount="1">
+<pre>''netropy'' is the name of the technology, on which &lt;&lt;tiddler xeno&gt;&gt; is built.
+
+The name is a play on words, derived from the concept of [[entropy|http://en.wikipedia.org/wiki/Entropy]]. The concept of entropy has often been loosely associated with the amount of ''order'', ''disorder'', and/or ''chaos'' in a system.
+
+From the Wikipedia entry about [[Information Theory|http://en.wikipedia.org/wiki/Information_theory]]:
+&gt;A key measure of information in the theory is known as [[entropy|http://en.wikipedia.org/wiki/Entropy_(information_theory)]], which is usually expressed by the average number of bits needed for storage or communication.  Intuitively, entropy quantifies the uncertainty involved when encountering a [[random variable|http://en.wikipedia.org/wiki/Random_variable]]. For example, a fair coin flip (2 equally likely outcomes) will have less entropy than a roll of a die (6 equally likely outcomes).
+
+Real life data are a lot more complex than that. As entropy increases steadily in our information society, we see and address the need for information to ''spread'' as fast and ''frictionless'' on the net as possible.
+
+Controlling entropy - which in itself may be brought to good uses. This is the main design rationale behind &lt;&lt;tiddler xeno&gt;&gt;.
+</pre>
 </div>
 <div title="netropy-macro" modifier="Peter Hübel" created="201205240005" modified="201604191837" tags="systemConfig" changecount="6">
 <pre>// Don't know what will change when i change ''place'' to ''context''. iPhone? 
